Fix overlapping navigation

--- a/assets/css/pqr.css
+++ b/assets/css/pqr.css
@@ -8991,12 +8991,14 @@ h5 {
 }
 @media (min-width: 992px) {
   .dropdown-menu {
-    transition: all 200ms ease-out;
+    transition: opacity 200ms ease-out;
     opacity: 0;
+    z-index: -1;
     display: block;
   }
   .open .dropdown-menu {
     opacity: 1;
+    z-index: 1;
   }
 }
 nav {
